--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
             color: rgb(226, 230, 234);
             border: none;
 
+
         }
     </style>
 </head>
@@ -53,7 +54,7 @@
 <body>
     <div class="box">
         <h2 style="text-align: center; color: rgb(219, 225, 225);">Sign In</h2>
-        <form action="" target="_blank">
+        <form action="images/audiovideo.html" target="_blank">
             <input type="email" placeholder="Email" required>
             <input type="password" placeholder="password" required>
             <button>Login</button>
